--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   provider: ^4.3.2+2
   shared_preferences: ^0.5.12
+  payhere_flutter: ^0.1.1
 
 dev_dependencies:
   flutter_test:
