--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^4.3.2+2
   shared_preferences: ^0.5.12
   payhere_flutter: ^0.1.1
+  qr_flutter: ^3.2.0
 
 dev_dependencies:
   flutter_test:
