--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   payhere_flutter: ^0.1.1
   qr_flutter: ^3.2.0
   intl: ^0.16.1
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
