homescreen realtime update

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   qr_flutter: ^3.2.0
   intl: ^0.16.1
   http: ^0.12.2
+  url_launcher: ^5.7.4
 
 dev_dependencies:
   flutter_test:
