--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="ticket_booking_client"
+        android:label="Urban Transport"
         android:icon="@mipmap/ic_launcher"
         tools:replace="android:label">
 
