--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,11 @@ dependencies:
   intl: ^0.16.1
   http: ^0.12.2
   url_launcher: ^5.7.4
+  test: ^1.15.4
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+#  flutter_test:
+#    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -74,9 +75,6 @@ flutter:
           weight: 700
         - asset: fonts/OpenSans-ExtraBold.ttf
           weight: 800
-        - asset: fonts/OpenSans-ExtraBoldItalic.ttf
-          weight: 800
-          style: italic
         - asset: fonts/OpenSans-BoldItalic.ttf
           weight: 700
           style: italic
